--- a/HireABook.Web.UI/Views/User/AddBooks.cshtml
+++ b/HireABook.Web.UI/Views/User/AddBooks.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model HireABook.Entity.BookInfo
+
 
 <div id="all">
     <div id="content">
@@ -11,7 +12,7 @@
                     <div class="box">
                         <h1 style="text-align: center">Add Your Book</h1>
 
-                        <form action="/Home/RegisterUser" method="post">
+                        <form action="/User/AddBooks" method="post">
                             <div class="form-group">
                                 <label for="bookTitle">Book Title</label>
                                 <input id="bookTitle" name="bookTitle" type="text" class="form-control">
@@ -22,7 +23,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="genre">Genre</label>
-                                <input id="genre" name="genre" type="text" class="form-control">
+                                @Html.DropDownListFor(x => Model.GenreId, (List<SelectListItem>)ViewBag.GenreList, htmlAttributes: new { @class = "form-control", id = "GenreId" })
                             </div>
                             <div class="form-group">
                                 <label for="isbn">ISBN</label>
@@ -30,7 +31,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="edition">Edition</label>
-                                <input id="edition" name="edition" type="password" class="form-control">
+                                <input id="edition" name="edition" type="text" class="form-control">
                             </div>
                             <div class="form-group">
                                 <label for="originalPrice">Original Price</label>
