--- a/HireABook.Web.UI/Views/User/ShowMyProfile.cshtml
+++ b/HireABook.Web.UI/Views/User/ShowMyProfile.cshtml
@@ -88,7 +88,7 @@
 
                             <div class="col-xs-6">
                                 <label for="phone"><h4>Phone</h4></label>
-                                <input type="text" class="form-control" name="phone" id="phone" value="@Model.PhoneNo" placeholder="enter phone" title="enter your phone number.">
+                                <input type="number" class="form-control" name="phoneNo" id="phone" value="@Model.PhoneNo" placeholder="enter phone" title="enter your phone number.">
                             </div>
                         </div>
 
