--- a/HireABook.Web.UI/Views/User/BookDetails.cshtml
+++ b/HireABook.Web.UI/Views/User/BookDetails.cshtml
@@ -7,16 +7,16 @@
                     <img src="@Model.FrontCover" alt="" class="img-responsive" width="350" height="350">
                 </div>
 
-                <div class="ribbon sale">
+                @*<div class="ribbon sale">
                     <div class="theribbon">SALE</div>
                     <div class="ribbon-background"></div>
                 </div>
-                <!-- /.ribbon -->
+                 /.ribbon 
 
                 <div class="ribbon new">
                     <div class="theribbon">NEW</div>
                     <div class="ribbon-background"></div>
-                </div>
+                </div>*@
                 <!-- /.ribbon -->
 
             </div>
@@ -26,7 +26,8 @@
                     <h3 style="text-align: center">Genre : @Model.GenreName</h3>
                     <h3 style="text-align: center; color:lightseagreen">By @Model.AuthorName</h3>
                     <h4 style="text-align: center">@Model.Edition Edition</h4>
-                    <p class="price">@Model.OriginalPrice Tk</p>
+                    <p class="price" style="text-align: center">@Model.OriginalPrice Tk</p>
+                    <a href="/Book/BorrowBook/@Model.BookId"><input type="button" name="name" value="Borrow" class="btn btn-secondary" style="text-align: center" /></a>
                     <p class="goToDescription"><a href="#details" class="scroll-to">See The Contact Information if you want to buy this book</a></p>
 
                 </div>
